--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
     strategy:
       matrix:
         os: [arm-3.0-large, ubuntu-7.0-xlarge]
+    fail-fast: true  
     timeout-minutes: 15
     steps:
       - uses: actions/checkout@v4
