Update golangci-lint to v1.60.3
This change updates the golangci-lint version to v1.60.3 and resolving
warnings for deprecated linters and linter settings.

Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -8,7 +8,7 @@ linters:
     - goimports
     - ineffassign
     - revive
-    - vet
+    - govet
     - unused
     - misspell
   disable:
@@ -22,11 +22,11 @@ issues:
       # it can make it hard to understand what the unused parameter
       # was supposed to be used for.
       text: "unused-parameter:"
-
-run:
-  deadline: 4m
-  skip-dirs:
+  exclude-dirs:
     - docs
     - images
     - out
     - script
+
+run:
+  deadline: 4m
