--- a/.github/workflows/review-dependencies.yml
+++ b/.github/workflows/review-dependencies.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   review:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
 
     permissions:
       # Write permissions needed to comment review results on PR.
