--- a/soci-snapshotter.service
+++ b/soci-snapshotter.service
@@ -34,7 +34,7 @@ Before=containerd.service
 
 [Service]
 Type=notify
-ExecStart=/usr/local/bin/soci-snapshotter-grpc
+ExecStart=/usr/local/bin/soci-snapshotter-grpc --address fd://
 Restart=always
 RestartSec=5
 
