Add EKS docs to automated version updating
Signed-off-by: David Son <davbson@amazon.com>

--- a/.github/workflows/update-getting-started-guide.yml
+++ b/.github/workflows/update-getting-started-guide.yml
@@ -27,6 +27,7 @@ jobs:
       - uses: actions/checkout@v4
         with:
           sparse-checkout: |
+            docs/eks.md
             docs/getting-started.md
             scripts/update-getting-started-guide-version.sh
 
@@ -49,6 +50,7 @@ jobs:
         with:
           ref: main
           sparse-checkout: |
+            docs/eks.md
             docs/getting-started.md
             scripts/update-getting-started-guide-version.sh
 
