Add non-lazy-loaded-layer verification
Though we attempt to mimic overlay in MountLocal, we do not do any
verification once we receive the content. This change adds functionality
for this, and the option to disable it as well.

Signed-off-by: David Son <davbson@amazon.com>

--- a/config/config.toml
+++ b/config/config.toml
@@ -22,6 +22,7 @@ max_concurrency=0  # Actually zero
 no_prometheus=false
 mount_timeout_sec=0
 fuse_metrics_emit_wait_duration_sec=0
+verify_local_mounts=true
 
 ## config/config.go Config
 
