Move client to FS level
We will need access to the client once we begin changes for parallel
pull and unpack operations. However, since we already use the containerd
content store it seems weird to maintain two different clients, so this
commit also contains logic to ensure they use the same containerd
client.

Signed-off-by: David Son <davbson@amazon.com>
Co-authored-by: Henry Wang <henwang@amazon.com>
Co-authored-by: Kern Walster <walster@amazon.com>
Co-authored-by: Austin Vazquez <macedonv@amazon.com>

--- a/config/config.toml
+++ b/config/config.toml
@@ -100,7 +100,7 @@ emit_metric_period_sec=0
 
 [content_store]
 type="" # will set to 'soci' by default
-# Socket address for containerd. Only applicable using containerd content store.
+# Socket address for containerd.
 # Defaults to '/run/containerd/containerd.sock'
 containerd_address=""
 namespace="" # will set to 'default' by default
