Add Go 1.23 branch to build/prebuild workflows
Signed-off-by: David Son <davbson@amazon.com>

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,13 +2,13 @@ name: Build
 
 on:
   push:
-    branches: ['main', 'release/**']
+    branches: ['main', 'release/**', 'go-1.23.x']
     paths:
       - '**'
       - '!docs/**' # ignore docs changes
       - '!**.md' # ignore markdown changes
   pull_request:
-    branches: ['main', 'release/**']
+    branches: ['main', 'release/**', 'go-1.23.x']
     paths:
       - '.github/workflows/build.yml'
       - '**.go'
