--- a/.github/workflows/prebuild.yml
+++ b/.github/workflows/prebuild.yml
@@ -2,9 +2,9 @@ name: Pre-build
 
 on:
   push:
-    branches: ['main', 'release/**']
+    branches: ['main', 'release/**', 'go-1.23.x']
   pull_request:
-    branches: ['main', 'release/**']
+    branches: ['main', 'release/**', 'go-1.23.x']
 
 env:
   GO_VERSION: '1.22.11'
