--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -94,6 +94,26 @@ jobs:
       - name: Install zlib static on AL2 ARM instances
         if: matrix.os == 'al2-arm'
         run: dnf install zlib-static.aarch64 -y
+
+      - name: Make dependencies
+        run: make build nerdctl-with-idmapping
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: v0.21.0
+
+      - name: Build Docker image with cache
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: false
+          load: true
+          build-args: |
+            CONTAINERD_VERSION=${{ matrix.containerd }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
       - name: Run integration tests
         run: |
           if [[ "${{ matrix.os }}" == "ubuntu-x86" ]]; then
