Require containerd for soci-snapshotter.service
Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/soci-snapshotter.service
+++ b/soci-snapshotter.service
@@ -29,8 +29,8 @@
 [Unit]
 Description=soci snapshotter containerd plugin
 Documentation=https://github.com/awslabs/soci-snapshotter
-After=network.target
-Before=containerd.service
+After=network.target containerd.service
+Requires=containerd.service
 
 [Service]
 Type=notify
