Add configuration imports support
This change adds imports root configuration field support which allows
users to specify multiple configuration files and merge them into a
single snapshotter daemon configuration.

Signed-off-by: Austin Vazquez <macedonv@amazon.com>

--- a/config/config.toml
+++ b/config/config.toml
@@ -23,6 +23,8 @@ fuse_metrics_emit_wait_duration_sec=0
 
 ## config/config.go Config
 
+imports = []
+
 metrics_address=""
 metrics_network="" # Uses default metrics network
 # no_prometheus=true # Defined above, can't be redeclared
